src/test/deca/context/invalid/modulo_float.deca
//ERROR ::
{
float x=8.0;
int y = 2;
int z = y%x;

}